Hide fullscreen on iPhone, fix arrow button

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,7 +4,7 @@ body, html {
 	padding: 0;
 	overflow: hidden;
 	overflow-x: hidden;
-	height: 100%;
+	height: calc(var(--vh) * 100);
 }
 
 #app {
